@@ -2,6 +2,7 @@ Version 1.10 (15 July 2022)
   * Fixed checks on classes.
   * Updated links.
   * Fixed bug in crost.R and crost.ma.R when checking number of parameters to optimise. Bug did not cause issues before. 
+  * Updated DESCRIPTION.
 
 Version 1.9 (10 March 2016)
   * Provide vectors of non-zero demand and intervals for crost.R and crost.ma.R.
